# pycalc

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
pycalc/: __about__.py  __init__.py  __main__.py  main.py  operations.py
